2001-05-09  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* src/engine/*.[ch]: add GPL headers

2001-05-09  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/price-scatter.scm: use the configurable report
	title.

2001-05-09  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/user-preferences.texinfo: update docs

	* src/doc/design/reports.texinfo: update docs

	* src/doc/design/top-level.texinfo: update docs

	* src/doc/design/register.texinfo: update docs

	* src/doc/design/component-manager.texinfo: update docs

2001-05-09  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/price-scatter.scm: Added new option: get weighted
	average prices from the past, not only the instant prices.

	* src/scm/commodity-utilities.scm
	(gnc:get-commodity-totalaverage-prices): Added
	function. Eventually this could be an extension/alternative to
	prices from the pricedb.

2001-05-09  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/net-barchart.scm: check for empty data
	and empty account lists.

	* src/scm/report/category-barchart.scm: check for empty
	data, print a nice error message.

	* src/scm/html-piechart.scm: now produces a warning if an
	empty piechart is sent to it.

	* src/scm/html-barchart.scm: now checks for and warns
	against empty barcharts

2001-05-08  Christian Stimming  <stimming@tuhh.de>

	* src/scm/options-utilities.scm, src/scm/report/price-scatter.scm:
	moved gnc:options-add-marker-choice! from price-scatter.scm to
	options-utilities.scm.

2001-05-08  Dave Peticolas  <dave@krondo.com>

	* src/scm/price-quotes.scm: add currency quote support

	* src/gnome/dialog-account.c: add currency quote support

	* src/engine/Account.c: allow CURRENCY accounts to have price
	source set.

	* src/quotes/finance-quote-helper.in: add currency quote support

2001-05-07  Christian Stimming  <stimming@tuhh.de>

	* src/scm/commodity-utilities.scm: Always use the absolute value
	when building a weighted average.
